[package]
name = "abcpp"
version = "0.1.0"
edition = "2024"

[dependencies]
blst = "0.3"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
crossbeam = "0.8"
bincode = "1.3"
base64 = "0.22.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
debug = true

[lib]
path = "src/lib.rs"